0.0.19a
======

* Added a method to create an identity for a storage bucket and added a sample script
* Added a method to automatically create AWS config and credentials file from an identity

0.0.18
======

* Added CLI commands to create, restore, and delete snapshots across one or more teams:
  * cons3rt team run snapshot create --id=123
  * cons3rt team run snapshot restore --id=123
  * cons3rt team run snapshot delete --id=123
* Added a --skip arg to provide a list of deployment run IDs to skip
  * cons3rt team run snapshot create --id=3 --skip 12345
* Added a CLI command to list runs in a team:
  * cons3rt team run list --id=1
* Added project CLI commands for snapshots that behave like the team ones, allow you to manage snapshots across one or more projects:
  * cons3rt project run snapshot create --id=123
  * cons3rt project run snapshot restore --id=123
  * cons3rt project run snapshot delete --id=123
* Updated the error handling for parsing http responses
* Updated the error messages reported in host action results

0.0.17
======

* Added the "cons3rt run cancel" and "cons3rt run release" CLI commands
* Added the "cons3rt cloudspace project list", "cons3rt cloudspace user list", and "cons3rt user list" CLI commands
* Greatly enhanced CLI output formatting!!!!
* Added a create_user() method for easy creation of users over rest api
* Added user counts to the `ractl print` command
* Added methods to counts the list collab tools and count collab tool users for a team
* Added the `team collabtools` subcommand for the team CLI
* Added a `--blocked` arg to include blocked users in output
* Added a `--cpu` arg to specify the max number of CPU when subscribing to a template
* Added a methods to list the deployment runs and deployment run hosts in a cloud
* Added a method to list the deployment run hosts in a cloud that are using GPUs
* Added CLI command `cons3rt cloud run list --id=1` to list deployment runs in the cloud(s)